# gpt-query

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: gpt4.py
gpt-query/: gpt.py  logger.py  utils.py
gptquery/: __init__.py  composer.py  datatypes.py  gpt.py  logger.py  pipelines.py  templates.py  utils.py  wrappers.py
projects/: README.md  anthropic_example.py  google_example.py  incremental_example.py  infer.py  oai_example.py  vllm_example.py
projects/api_llm_examples/: anthropic_example.py  api_cost_calculator.py  azure_example.py  deepseek_example.py  google_example.py  incremental_example.py  oai_example.py  openrouter_example.py
projects/critic/: README.md  critic.py  data.py  data_math.py  eval.py  eval_gsm8k.py  eval_math.py  eval_math_old.py  github_writeup.md  prompts.py  scratch.py  stats.py  utils.py  vis.py  writeup.md
projects/critic/benchmarks/: cot_math_small.jsonl  data.py
projects/critic/eval_data/: gpt_3.5_turbo_gsm8k_eval_default_.jsonl  gpt_3.5_turbo_gsm8k_eval_deliberated_.jsonl  gpt_3.5_turbo_gsm8k_eval_single_step_.jsonl  gpt_3.5_turbo_gsm8k_eval_step_by_step_.jsonl  gpt_4_turbo_gsm8k_eval_default_.jsonl  gpt_4_turbo_gsm8k_eval_single_step_.jsonl
projects/llm_examples/: google_example.py  incremental_example.py  oai_example.py  vllm_example.py
projects/pipeline_examples/: pipelines_example.py  prompts.py
projects/util_examples/: api_cost_calculator.py  fstring_example.py
projects/vllm_examples/: README.md  benchmark.py  generate_sbatch_script.py  logprobs.py  notes.md  offline.py  router.py
(+84 files in other folders)
