[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptquery"
version = "0.0.1"
authors = [
		{ name="Alex Havrilla" },
]
description = "A very lite wrapper for interacting with the OpenAI API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
